<resources>
    <string name="app_name">Lab1 Base Converter</string>
    <string name="input_value">Input Value</string>
    <string name="zero">0</string>
    <string name="binary">Binary</string>
    <string name="octal">Octal</string>
    <string name="decimal">Decimal</string>
    <string name="hex">Hex</string>
    <string name="clear">Clear</string>
    <string name="result">Result</string>
    <string name="convert">Convert</string>
    <string name="copyright">Created by Jc Briones</string>
</resources>
